--- a/app/app.css
+++ b/app/app.css
@@ -80,13 +80,17 @@ form {
   .page-heading {
     @apply flex flex-col items-center gap-8 max-w-4xl text-center max-sm:gap-4;
   }
-  .resumes-section {
-    @apply flex flex-wrap max-md:flex-col max-md:gap-4 gap-6 items-start max-md:items-center w-full max-w-[1850px] justify-evenly;
-  }
+ .resumes-section {
+  @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 w-full max-w-[1200px] px-4 justify-items-center;
+}
+.resumes-section {
+  @apply grid grid-cols-2 lg:grid-cols-3 gap-8 px-4 w-full max-w-[1100px] mx-auto justify-items-center;
+}
 
   .resume-card {
-    @apply flex flex-col gap-8 h-[560px] w-[350px] lg:w-[430px] xl:w-[490px] bg-white rounded-2xl p-4;
-  }
+  @apply flex flex-col gap-6 w-full max-w-[360px] bg-white rounded-2xl p-4;
+}
+
 
   .resume-card-header {
     @apply flex flex-row gap-2 justify-between min-h-[110px] max-sm:flex-col items-center max-md:justify-center max-md:items-center;
